# ocaml-lsp-specification

./: Makefile  README.md  dune  language_server_protocol.opam
lib/: dune  language_server_protocol.ml  language_server_protocol.mli  types.ml
test/: dune  expect_tests.ml
